Change package name
Packagist doesn't allow Uppercase name in packages, changed to: fcm-unicamp/themebundle

--- a/composer.json
+++ b/composer.json
@@ -1,5 +1,5 @@
 {
-    "name" : "FCM-Unicamp/ThemeBundle",
+    "name" : "fcm-unicamp/themebundle",
     "description" : "Default theme for FCM - Unicamp",
     "type" : "symfony-bundle",
     "authors" : [
