--- a/composer.json
+++ b/composer.json
@@ -30,8 +30,8 @@
     "repositories" : [{
     }],
     "extra" : {
-    "branch-alias" : {
-            "dev-master" : "1.0alpha"
+        "branch-alias" : {
+            "dev-master": "1.0-dev"    
         }
     }
 }
