--- a/composer.json
+++ b/composer.json
@@ -20,12 +20,5 @@
             "FCM-Unicamp\\ThemeBundle" : ""
         }
     },
-    "target-dir" : "FCMUnicamp/ThemeBundle",
-    "repositories" : [{
-    }],
-    "extra" : {
-        "branch-alias" : {
-            "dev-master": "1.0-dev"    
-        }
-    }
+    "target-dir" : "FCMUnicamp/ThemeBundle"
 }
