--- a/composer.json
+++ b/composer.json
@@ -15,6 +15,10 @@
     "keywords" : [
         "FCM Theme Bundle"
     ],
+    "minimum-stability": "dev",
+    "require": {
+        "php": ">=5.4.0"
+    },
     "autoload" : {
         "psr-0" : {
             "FCM-Unicamp\\ThemeBundle" : ""
